--- a/Wireframe/css/styles.css
+++ b/Wireframe/css/styles.css
@@ -68,6 +68,10 @@ nav ul li a:hover{
     justify-content: space-between;
 }
 
+.posts .card{
+    width: 360px;
+}
+
 .posts img{
     border-radius: 20px 20px 0 0;
 }
@@ -93,4 +97,76 @@ nav ul li a:hover{
     padding: 10px 24px ;
     border-radius: 100px;
     font-size: 20px;
+    margin-bottom: 20px;
+    display: inline-block;
+    text-decoration: none;
+}
+
+.posts a:hover{
+    background: #261358;
+}
+
+.posts .footer-card{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-top .container{
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #aaa;
+    /* width: px; */
+    /* padding: 70px; */
+}
+
+.footer-top .container .link-group{
+    /* width: 100px; */
+    /* margin: 5px;
+    padding: 100px; */
+    /* display: block; */
+    padding: 70px;
+}
+
+.footer-top a{
+    padding: 15px;
+    display: block;
+    color: #000;
+    text-decoration: none;
+}
+
+.footer-bottom{
+     background-color: #d9d9d9;
+     padding: 15px;
+     display: flex;
+     justify-content: center
+}
+
+.novidades h2{
+    text-align: center;
+    margin: 91px 0 62px;
+    font-size: 64px;
+}
+
+.novidades .container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.nosso-time h2{
+    text-align: center;
+    margin: 91px 0 62px;
+    font-size: 64px;
+}
+
+.nosso-time .container{
+    display: flex;
+    justify-content: space-around;
+    /* margin: 10px; */
+}
+
+
+
+.nosso-time img{
+    /* width: 10%; */
+    margin: 20px;
 }
