--- a/Layout/index.html
+++ b/Layout/index.html
@@ -62,13 +62,17 @@
         <div class="container">
             <div class="about-us-description">
                 <h4>professional & team choose copy.ai</h4>
-                <p>Odio dictum lacus augue nulla sit integer facilisis massa. Nec et tellus eu amet. Faucibus sit sit massa ullamcorper </p>
+                <p>Odio dictum lacus augue nulla sit integer facilisis massa. Nec et tellus eu amet. Faucibus sit sit
+                    massa ullamcorper </p>
 
                 <a href="#" class="green">Get Started</a>
             </div>
 
             <div class="about-us-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/gMxQ8vxH9Vk?si=aJTmRCPnITfk6Smy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gMxQ8vxH9Vk?si=aJTmRCPnITfk6Smy"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -88,8 +92,275 @@
                     <a href="#">Try Blog Content</a>
                 </div>
             </div>
+            <!-- fim: card -->
+
+            <div class="card">
+                <div class="icon-card">
+                    <img src="imgs/icons/Article.svg" alt="Article">
+                </div>
+                <div class="description-card">
+                    <h4>Article</h4>
+                    <p>Write optimized blog posts in a fraction of the time</p>
+
+                    <a href="#">Try Blog Content</a>
+                </div>
+            </div>
+            <!-- fim: card -->
+
+            <div class="card">
+                <div class="icon-card">
+                    <img src="imgs/icons/Content-Writing.svg" alt="Content-Writing">
+                </div>
+                <div class="description-card">
+                    <h4>Content Writing</h4>
+                    <p>Write optimized blog posts in a fraction of the time</p>
+
+                    <a href="#">Try Blog Content</a>
+                </div>
+            </div>
+            <!-- fim: card -->
+
+            <div class="card">
+                <div class="icon-card">
+                    <img src="imgs/icons/Seo.svg" alt="Seo">
+                </div>
+                <div class="description-card">
+                    <h4>Seo</h4>
+                    <p>Write optimized blog posts in a fraction of the time</p>
+
+                    <a href="#">Try Blog Content</a>
+                </div>
+            </div>
+            <!-- fim: card -->
+
+            <div class="card">
+                <div class="icon-card">
+                    <img src="imgs/icons/Design.svg" alt="Design">
+                </div>
+                <div class="description-card">
+                    <h4>Design</h4>
+                    <p>Write optimized blog posts in a fraction of the time</p>
+
+                    <a href="#">Try Blog Content</a>
+                </div>
+            </div>
+            <!-- fim: card -->
+
+            <div class="card">
+                <div class="icon-card">
+                    <img src="imgs/icons/Coding.svg" alt="Coding">
+                </div>
+                <div class="description-card">
+                    <h4>Coding</h4>
+                    <p>Write optimized blog posts in a fraction of the time</p>
+
+                    <a href="#">Try Blog Content</a>
+                </div>
+            </div>
+            <!-- fim: card -->
         </div>
     </section>
+
+    <section class="testimonials">
+        <h3>Let’s See What Our Clients Says</h3>
+        <div class="container">
+            <div class="testimonial-card">
+                <div class="perfil">
+                    <div class="photo-perfil">
+                        <img src="imgs/perfil.png" alt="perfil">
+                    </div>
+
+                    <div class="perfil-name">
+                        <h4>Brooklyn Simmons</h4>
+                        <p class="cargo">Nursing Assistant</p>
+                    </div>
+                </div>
+                <!-- fim: perfil -->
+
+                <div class="comments">
+                    <p>Odio dictum lacus augue nulla sit integer facilisis massa. Nec et tellus eu amet. Faucibus sit
+                        sit massa ullamcorper</p>
+                </div>
+
+                <div class="perfil">
+                    <div class="photo-perfil">
+                        <img src="imgs/perfil.png" alt="perfil">
+                    </div>
+
+                    <div class="perfil-name">
+                        <h4>Brooklyn Simmons</h4>
+                        <p class="cargo">Nursing Assistant</p>
+                    </div>
+                </div>
+                <!-- fim: perfil -->
+
+                <div class="comments">
+                    <p>Odio dictum lacus augue nulla sit integer facilisis massa. Nec et tellus eu amet. Faucibus sit
+                        sit massa ullamcorper</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="fuction">
+        <h3>How it works</h3>
+        <div class="container">
+            <div class="image-work">
+                <img src="imgs/work-1.jpg" alt="work">
+            </div>
+
+            <div class="description-text">
+                <h4><span>1</span> Enter your copywrite project</h4>
+
+                <div class="content-description-work">
+
+                    <p class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra est purus eu
+                        tempor tincidunt commodo.</p>
+
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li>Quam duis viverra amet, ultrices risus quis integer nec nulla.</li>
+                        <li>Tortor turpis nibh viverra nunc bibendum.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- fim:work -->
+
+            <div class="image-work">
+                <img src="imgs/work-2.jpg" alt="work">
+            </div>
+
+            <div class="description-text">
+                <h4><span>2</span> Genarate Idea</h4>
+
+                <div class="content-description-work">
+
+                    <p class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra est purus eu
+                        tempor tincidunt commodo.</p>
+
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li>Quam duis viverra amet, ultrices risus quis integer nec nulla.</li>
+                        <li>Tortor turpis nibh viverra nunc bibendum.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- fim:work -->
+
+            <div class="image-work">
+                <img src="imgs/work-3.jpg" alt="work">
+            </div>
+
+            <div class="description-text">
+                <h4><span>3</span> Copy & Use</h4>
+
+                <div class="content-description-work">
+
+                    <p class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra est purus eu
+                        tempor tincidunt commodo.</p>
+
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li>Quam duis viverra amet, ultrices risus quis integer nec nulla.</li>
+                        <li>Tortor turpis nibh viverra nunc bibendum.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- fim:work -->
+        </div>
+    </section>
+
+    <section class="ready">
+        <h3>Ready to level-up?</h3>
+
+        <div class="container">
+            <p>Id ipsum amet nibh dolor mi ac diam pellentesque.</p>
+            <a href="#" class="green">Get Started - It’s Free</a>
+
+            <form>
+                <fieldset>
+                    <div class="option">
+                        <input type="radio" name="plans" value="no-credit">
+                        <span>No Credit Card Required</span>
+                    </div>
+
+                    <div class="option">
+                        <input type="radio" name="plans" value="30-credit">
+                        <span>30 credits on sign up</span>
+                    </div>
+
+                    <div class="option">
+                        <input type="radio" name="plans" value="90-credit">
+                        <span>90+ contents type to explore</span>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-top">
+            <div class="container">
+                <div class="footer-link-group">
+                    <h6>Product</h6>
+                    <ul>
+                        <li><a href="#">login</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Copy ai Reviews</a></li>
+                        <li><a href="#">Alternatives</a></li>
+                        <li><a href="#">25+ Languages</a></li>
+                        <li><a href="#">Free Ai Tools</a></li>
+                    </ul>
+
+                    <div class="footer-link-group">
+                        <h6>Company</h6>
+                        <ul>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Community</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Linkedin</a></li>
+                            <li><a href="#">Affiliate Program</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-link-group">
+                        <h6>Support</h6>
+                        <ul>
+                            <li><a href="#">Weekly Deos</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Report a Bug</a></li>
+                            <li><a href="#">Report an Outage</a></li>
+                            <li><a href="#">Request a New Feature</a></li>
+                        </ul>
+                    </div>
+                    
+                    <div class="footer-link-group">
+                        <h6>User Cases</h6>
+                        <ul>
+                            <li><a href="#">For Blog Writers</a></li>
+                            <li><a href="#">For Social Media</a></li>
+                            <li><a href="#">Managers</a></li>
+                            <li><a href="#">Report</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="contant-footer-silika">
+                        <h4>Silika.ai</h4>
+                        <p>© 2025 copy ai, Inc </p>
+                        <a href="#">Privacy Notice</a>
+                        <a href="#">Terms of service</a>
+                    </div>
+
+                    <div class="social-midia">
+                        <a href="#"><img src="imgs/icons/icons_facebook.svg" alt="facebook"></a>
+                        <a href="#"><img src="imgs/icons/icons_instagram.svg" alt="instagram"></a>
+                        <a href="#"><img src="imgs/icons/icons_twitter.svg" alt="twitter"></a>
+                    </div>
+                </div>
+            </div>
+    </footer>
 </body>
 
 </html>
