--- a/Layout/index.html
+++ b/Layout/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout | Design Studio</title>
+
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -13,7 +21,7 @@
             <div class="container">
                 <div class="logo">
                     <h1>silika</h1>
-                    <a href="#" class="red">We’re Hiring</a>
+                    <a href="#" class="secondary-color">We’re Hiring</a>
                 </div>
                 <!-- fim:logo  -->
                 <nav>
@@ -28,7 +36,7 @@
 
                 <div class="login">
                     <a href="#">Login</a>
-                    <a href="#" class="green">Get Started</a>
+                    <a href="#" class="primary-color">Get Started</a>
                 </div>
             </div>
         </header>
@@ -40,8 +48,8 @@
                     Nulla consectetur nunc egestas metus pellentesque.</p>
 
                 <div class="bts-cta">
-                    <a href="#" class="green">Get Started</a>
-                    <a href="#" class="red">How It Works</a>
+                    <a href="#" class="primary-color">Get Started</a>
+                    <a href="#" class="secondary-color">How It Works</a>
                 </div>
             </div>
         </div>
@@ -65,7 +73,7 @@
                 <p>Odio dictum lacus augue nulla sit integer facilisis massa. Nec et tellus eu amet. Faucibus sit sit
                     massa ullamcorper </p>
 
-                <a href="#" class="green">Get Started</a>
+                <a href="#" class="primary-color">Get Started</a>
             </div>
 
             <div class="about-us-video">
@@ -275,7 +283,7 @@
 
         <div class="container">
             <p>Id ipsum amet nibh dolor mi ac diam pellentesque.</p>
-            <a href="#" class="green">Get Started - It’s Free</a>
+            <a href="#" class="primary-color">Get Started - It’s Free</a>
 
             <form>
                 <fieldset>
@@ -333,7 +341,7 @@
                             <li><a href="#">Request a New Feature</a></li>
                         </ul>
                     </div>
-                    
+
                     <div class="footer-link-group">
                         <h6>User Cases</h6>
                         <ul>
