--- a/Layout/css/styles.css
+++ b/Layout/css/styles.css
@@ -9,21 +9,35 @@
     --primary-color:#47BEBA;
     --secondary-color:#F22E52;
     --text-color-button:#fff;
+    --padding-button:1rem 2rem;
 }
 
 .primary-color{
     background: var(--primary-color);
     color: var(--text-color-button);
+    padding: var(--padding-button);
+    display: inline-block;
+    border-radius: 5px;
 }
 
 .secondary-color{
     background: var(--secondary-color);
     color: var(--text-color-button);
+    padding: var(--padding-button);
+    display: inline-block;
+    border-radius: 5px;
 }
 
 .container{
     width: 1172px;
     margin: auto;
+}
+
+h1{
+ font-family: "Biryani", sans-serif;
+ font-size: 40px;
+ font-weight: bold;
+ color: #160647;
 }
 
 h3{
@@ -32,11 +46,17 @@ h3{
     font-weight: bold;
 }
 
+a{
+    text-decoration: none;
+    color: #160647;
+}
+
 /* top header */
 
 .top-heard{
     background: url(../imgs/fundo.jpg) no-repeat;
     background-size: cover;
+    padding-top: 40px;
 }
 
 .top-heard header .container{
@@ -45,7 +65,91 @@ h3{
 
 }
 
+.top-heard .logo{
+    display: flex;
+    align-items: center;
+}
+
+.top-heard .logo h1{
+    margin-right: 6px;
+}
+
+nav{
+    display:flex;
+    align-items: center;
+}
+
 nav ul{
     display: flex;
-    
+    list-style: none;
 }
+
+nav ul li{
+    margin: 0 16px;
+}
+
+.login{
+    display: flex;
+    align-items: center;
+}
+
+.login .primary-color{
+    margin-left: 16px;
+}
+
+/* cta */
+
+.cta{
+    padding: 208px 0;
+}
+
+.cta .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cta h2{
+    font-size: 64px;
+    color: #160647;
+    text-align: center;
+}
+
+.cta p{
+    margin: 30px 0 40px;
+    width: 697px;
+    text-align: center;
+    color: #6c6c6c;
+}
+
+.cta a{
+    margin: 0 10px;
+}
+
+.cta a:hover{
+    box-shadow: 0 0 10px #5e0202;
+}
+
+.brands{
+    margin: 121px;
+}
+
+.brands .container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-us .container{
+    display: flex;
+    align-items: center;
+}
+
+.about-us h3{
+    /* text-align: center; */
+    margin: 115px 115px 100px;
+    font-size: 50px;
+}
+
+/* .about-us .container .about-us-video{
+    justify-content:space-around;
+} */
