--- a/Layout/index.html
+++ b/Layout/index.html
@@ -11,7 +11,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;600;700;800;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -61,7 +61,7 @@
             <img src="imgs/mosaic.png" alt="logo mosaic">
             <img src="imgs/colab.png" alt="logo colab">
             <img src="imgs/holtzman-partners.png" alt="logo holtzman-partners">
-        </div>
+        </div> 
     </section>
     <!-- brans -->
 
