--- a/Layout/css/styles.css
+++ b/Layout/css/styles.css
@@ -5,14 +5,14 @@
 }
 
 /* variáveis */
-:root{
-    --primary-color:#47BEBA;
-    --secondary-color:#F22E52;
-    --text-color-button:#fff;
-    --padding-button:1rem 2rem;
+:root {
+    --primary-color: #47BEBA;
+    --secondary-color: #F22E52;
+    --text-color-button: #fff;
+    --padding-button: 1rem 2rem;
 }
 
-.primary-color{
+.primary-color {
     background: var(--primary-color);
     color: var(--text-color-button);
     padding: var(--padding-button);
@@ -20,7 +20,7 @@
     border-radius: 5px;
 }
 
-.secondary-color{
+.secondary-color {
     background: var(--secondary-color);
     color: var(--text-color-button);
     padding: var(--padding-button);
@@ -28,128 +28,252 @@
     border-radius: 5px;
 }
 
-.container{
+.container {
     width: 1172px;
     margin: auto;
 }
 
-h1{
- font-family: "Biryani", sans-serif;
- font-size: 40px;
- font-weight: bold;
- color: #160647;
+h1 {
+    font-family: "Biryani", sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    color: #160647;
 }
 
-h3{
+h3 {
     text-align: center;
     font-size: 48px;
     font-weight: bold;
+    margin: 100px 0;
 }
 
-a{
+a {
     text-decoration: none;
     color: #160647;
 }
 
 /* top header */
 
-.top-heard{
+.top-heard {
     background: url(../imgs/fundo.jpg) no-repeat;
     background-size: cover;
     padding-top: 40px;
 }
 
-.top-heard header .container{
+.top-heard header .container {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
 
 }
 
-.top-heard .logo{
+.top-heard .logo {
     display: flex;
     align-items: center;
 }
 
-.top-heard .logo h1{
+.top-heard .logo h1 {
     margin-right: 6px;
 }
 
-nav{
-    display:flex;
+nav {
+    display: flex;
     align-items: center;
 }
 
-nav ul{
+nav ul {
     display: flex;
     list-style: none;
 }
 
-nav ul li{
+nav ul li {
     margin: 0 16px;
 }
 
-.login{
+.login {
     display: flex;
     align-items: center;
 }
 
-.login .primary-color{
+.login .primary-color {
     margin-left: 16px;
 }
 
 /* cta */
 
-.cta{
+.cta {
     padding: 208px 0;
 }
 
-.cta .container{
+.cta .container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.cta h2{
+.cta h2 {
     font-size: 64px;
     color: #160647;
     text-align: center;
 }
 
-.cta p{
+.cta p {
     margin: 30px 0 40px;
     width: 697px;
     text-align: center;
     color: #6c6c6c;
 }
 
-.cta a{
+.cta a {
     margin: 0 10px;
 }
 
-.cta a:hover{
+.cta a:hover {
     box-shadow: 0 0 10px #5e0202;
 }
 
-.brands{
+.brands {
     margin: 121px;
 }
 
-.brands .container{
+.brands .container {
     display: flex;
     justify-content: space-around;
+
 }
 
-.about-us .container{
+.about-us .container {
     display: flex;
     align-items: center;
+    margin: 100px;
 }
 
-.about-us h3{
-    /* text-align: center; */
-    margin: 115px 115px 100px;
-    font-size: 50px;
+.about-us h4 {
+    font-size: 40px;
 }
 
-/* .about-us .container .about-us-video{
-    justify-content:space-around;
-} */
+.about-us p {
+    margin: 35px 0;
+    width: 383px;
+}
+
+.about-us a{
+    margin: 20px 0;
+}
+
+/* our features */
+
+.our-features h3{
+    margin: 100px 0;
+}
+
+.our-features .container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.our-features .container .card{
+    width: 300px;
+    padding: 48px 32px;
+    border: 1px solid #f1f1f1;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    display: flex;
+}
+
+.our-features .container .card .icon-card{
+    margin-right: 36px;
+}
+
+.our-features h4{
+    font-size: 20px;
+    color: #160647;
+}
+
+.our-features p{
+    color: #748994;
+    margin: 25px 0 21px;
+    font-size: 14px;
+}
+
+.our-features a{
+    color: var(--primary-color);
+    font-weight: 600;
+}
+
+.our-features a:hover{
+    text-decoration: underline;
+    color: #323232;
+}
+
+/* testimonials */
+
+.testimonials .container{
+    width: 821px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.testimonials h3{
+    width: 498px;
+    text-align: center;
+    margin: 100px auto;
+}
+
+.testimonials-card .perfil{
+    display: flex;
+}
+
+.testimonials-card .perfil .photo-perfil{
+    margin: 16px;
+}
+
+/* works */
+
+.works .container{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.works .image-work{
+    margin-right: 48px;
+}
+
+.works .description-text h4{
+    font-size: 20px;
+    color: #160647;
+    margin-bottom: 18px;
+}
+
+.works .description-text h4 span{
+    border: 1px solid #160647;
+    font-size: 14px;
+    padding: 5px 10px;
+    margin-right: 29px;
+}
+
+.works .content-description-work{
+    border-left: 1px dotted #d4d4d4;
+    margin-left: 15px;
+    padding-left: 42px;
+    height: 300px;
+}
+
+.works .content-description-work ul{
+    list-style: none;
+    padding-left: 42px;
+    font-size: 14px;
+    color: #160647;
+    line-height: 2;
+    margin-top: 43px;
+}
+
+/* ready */
+
+.ready fieldset{
+    display: flex;
+    justify-content: space-between;
+    border: none;
+}
