--- a/Layout/index.html
+++ b/Layout/index.html
@@ -11,7 +11,9 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;600;700;800;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;600;700;800;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -61,7 +63,7 @@
             <img src="imgs/mosaic.png" alt="logo mosaic">
             <img src="imgs/colab.png" alt="logo colab">
             <img src="imgs/holtzman-partners.png" alt="logo holtzman-partners">
-        </div> 
+        </div>
     </section>
     <!-- brans -->
 
@@ -183,13 +185,15 @@
                         <p class="cargo">Nursing Assistant</p>
                     </div>
                 </div>
-                <!-- fim: perfil -->
 
                 <div class="comments">
                     <p>Odio dictum lacus augue nulla sit integer facilisis massa. Nec et tellus eu amet. Faucibus sit
                         sit massa ullamcorper</p>
                 </div>
+            </div>
+            <!-- fim: perfil -->
 
+            <div class="testimonial-card">
                 <div class="perfil">
                     <div class="photo-perfil">
                         <img src="imgs/perfil.png" alt="perfil">
@@ -200,17 +204,21 @@
                         <p class="cargo">Nursing Assistant</p>
                     </div>
                 </div>
-                <!-- fim: perfil -->
 
                 <div class="comments">
                     <p>Odio dictum lacus augue nulla sit integer facilisis massa. Nec et tellus eu amet. Faucibus sit
                         sit massa ullamcorper</p>
                 </div>
             </div>
+            <!-- fim: perfil -->
+
+
+
+
         </div>
     </section>
 
-    <section class="fuction">
+    <section class="works">
         <h3>How it works</h3>
         <div class="container">
             <div class="image-work">
@@ -232,8 +240,11 @@
                     </ul>
                 </div>
             </div>
-            <!-- fim:work -->
+        </div>
+        <!-- fim:work -->
 
+
+        <div class="container">
             <div class="image-work">
                 <img src="imgs/work-2.jpg" alt="work">
             </div>
@@ -253,8 +264,10 @@
                     </ul>
                 </div>
             </div>
-            <!-- fim:work -->
+        </div>
+        <!-- fim:work -->
 
+        <div class="container">
             <div class="image-work">
                 <img src="imgs/work-3.jpg" alt="work">
             </div>
@@ -274,7 +287,8 @@
                     </ul>
                 </div>
             </div>
-            <!-- fim:work -->
+        </div>
+        <!-- fim:work -->
         </div>
     </section>
 
