finalização do Layout

--- a/Layout/index.html
+++ b/Layout/index.html
@@ -333,55 +333,57 @@
                         <li><a href="#">25+ Languages</a></li>
                         <li><a href="#">Free Ai Tools</a></li>
                     </ul>
-
-                    <div class="footer-link-group">
-                        <h6>Company</h6>
-                        <ul>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li><a href="#">Community</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Linkedin</a></li>
-                            <li><a href="#">Affiliate Program</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-link-group">
-                        <h6>Support</h6>
-                        <ul>
-                            <li><a href="#">Weekly Deos</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Report a Bug</a></li>
-                            <li><a href="#">Report an Outage</a></li>
-                            <li><a href="#">Request a New Feature</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-link-group">
-                        <h6>User Cases</h6>
-                        <ul>
-                            <li><a href="#">For Blog Writers</a></li>
-                            <li><a href="#">For Social Media</a></li>
-                            <li><a href="#">Managers</a></li>
-                            <li><a href="#">Report</a></li>
-                        </ul>
-                    </div>
                 </div>
 
-                <div class="container">
-                    <div class="contant-footer-silika">
-                        <h4>Silika.ai</h4>
-                        <p>© 2025 copy ai, Inc </p>
-                        <a href="#">Privacy Notice</a>
-                        <a href="#">Terms of service</a>
-                    </div>
+                <div class="footer-link-group">
+                    <h6>Company</h6>
+                    <ul>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Linkedin</a></li>
+                        <li><a href="#">Affiliate Program</a></li>
+                    </ul>
+                </div>
+                <div class="footer-link-group">
+                    <h6>Support</h6>
+                    <ul>
+                        <li><a href="#">Weekly Deos</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Report a Bug</a></li>
+                        <li><a href="#">Report an Outage</a></li>
+                        <li><a href="#">Request a New Feature</a></li>
+                    </ul>
+                </div>
 
-                    <div class="social-midia">
-                        <a href="#"><img src="imgs/icons/icons_facebook.svg" alt="facebook"></a>
-                        <a href="#"><img src="imgs/icons/icons_instagram.svg" alt="instagram"></a>
-                        <a href="#"><img src="imgs/icons/icons_twitter.svg" alt="twitter"></a>
-                    </div>
+                <div class="footer-link-group">
+                    <h6>User Cases</h6>
+                    <ul>
+                        <li><a href="#">For Blog Writers</a></li>
+                        <li><a href="#">For Social Media</a></li>
+                        <li><a href="#">Managers</a></li>
+                        <li><a href="#">Report</a></li>
+                    </ul>
                 </div>
             </div>
+        </div>
+        <div class="footer-top-2">
+            <div class="container">
+                <div class="contant-footer-silika">
+                    <h4>Silika.ai</h4>
+                    <p>© 2025 copy ai, Inc </p>
+                    <a href="#">Privacy Notice</a>
+                    <a href="#">Terms of service</a>
+                </div>
+
+                <div class="social-midia">
+                    <a href="#"><img src="imgs/icons/icons_facebook.svg" alt="facebook"></a>
+                    <a href="#"><img src="imgs/icons/icons_instagram.svg" alt="instagram"></a>
+                    <a href="#"><img src="imgs/icons/icons_twitter.svg" alt="twitter"></a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
