--- a/Layout/css/styles.css
+++ b/Layout/css/styles.css
@@ -272,8 +272,89 @@ nav ul li {
 
 /* ready */
 
+.ready .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .ready fieldset{
     display: flex;
     justify-content: space-between;
     border: none;
+}
+
+.ready h3{
+    margin-bottom: 30px;
+}
+
+.ready p{
+    color: #160647;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.ready a{
+    margin: 33px 0 53px;
+}
+
+.ready fieldset{
+    display: flex;
+    justify-content: space-between;
+    border: none;
+    gap: 60px;
+}
+
+/* footer */
+
+footer .container{
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+}
+
+/* footer{
+   
+} */
+
+.footer-top{
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #000;
+    margin: 100px;
+    padding: 40px;
+}
+
+.footer-top .footer-link-group h6{
+   margin-bottom: 20px;
+}
+
+ .footer-link-group ul{
+    list-style: none;
+}
+
+.footer-link-group a{
+    line-height: 2;
+
+}
+
+.footer-top-2 .container{
+    /* width: 821px; */
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-top-2 .contant-footer-silika{
+    display: flex;
+    gap: 20px;
+}
+
+.footer-top-2 h4{
+    font-size: 20px;
+}
+
+.footer-top-2 .social-midia{
+    display: flex;
+    gap: 20px;
 }
